20251003_daily_arXiv_update

--- a/arxiv/2025_09_arxiv.html
+++ b/arxiv/2025_09_arxiv.html
@@ -205,6 +205,102 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.14306">https://arxiv.org/abs/2509.14306</a></span> From geometry to cosmology: a pedagogical review of inflation in curvature, torsion, and extended gravity theories</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.14395">https://arxiv.org/abs/2509.14395</a></span> Non-invertible Chiral Symmetry and Axions under Electromagnetic Duality (Gongjun Choi, Tony Gherghetta, John Terning)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.14288">https://arxiv.org/abs/2509.14288</a></span> James Burkett Hartle: a Biographical Memoir (Gary T. Horowitz, Kip S. Thorne)</p>
+<br>
+<p class="p1">20250922</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.15539">https://arxiv.org/abs/2509.15539</a></span> Improving Spectral Resolution from Real-time Evolution for Correlated Systems (Thomas P. Devereaux)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.15300">https://arxiv.org/abs/2509.15300</a></span> Electronic Crystal Phases in the Presence of Non-Uniform Berry Curvature and Tunable Berry Flux : The λN -Jellium model ***** (Félix Desrochers, Joe Huxford, Mark R. Hirsbrunner, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.15996">https://arxiv.org/abs/2509.15996</a></span> Non-Fermi liquid behaviour of CDW instabilities in fractionally-filled moir ́e flatbands **** (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.15849">https://arxiv.org/abs/2509.15849</a></span> Formation of Cavity-Polaritons via High-Order Van Hove Singularities ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.16200">https://arxiv.org/abs/2509.16200</a></span> Exploring confinement transitions in Z2 lattice gauge theories with dipolar atoms beyond one dimension</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.15731">https://arxiv.org/abs/2509.15731</a></span> Quantum Metric Corrections to Liouville’s Theorem and Chiral Kinetic Theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.15978">https://arxiv.org/abs/2509.15978</a></span> Symmetries Beget Symmetries: Ghostly Higher-Form Symmetries and the Descent Equation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.15604">https://arxiv.org/abs/2509.15604</a></span> Spin-Orbital Altermagnetism *****</p>
+<p class="p2"><br></p>
+<p class="p1">20250923</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.17362">https://arxiv.org/abs/2509.17362</a></span> Universal Scaling Functions of the Grüneisen Ratio near Quantum Critical Points (Yang Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.16493">https://arxiv.org/abs/2509.16493</a></span> Joint commensuration in moiré charge-order superlattices drives shear topological defects (Kyoung Hun Oh, Nuh Gedik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.17082">https://arxiv.org/abs/2509.17082</a></span> Gyromagnetic ratio and Pauli form factor in anisotropic QED2+1 at one-loop</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.17473">https://arxiv.org/abs/2509.17473</a></span> Entanglement manifestation of knot topology in a non-Hermitian lattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18075">https://arxiv.org/abs/2509.18075</a></span> Pseudogap in a Fermi-Hubbard quantum simulator</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.16311">https://arxiv.org/abs/2509.16311</a></span> Entanglement Asymmetry for Higher and Noninvertible Symmetries (Pasquale Calabrese)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.17414">https://arxiv.org/abs/2509.17414</a></span> Dimensionality effect on exceptional fermionic superfluidity with spin-dependent asymmetric hopping</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.17417">https://arxiv.org/abs/2509.17417</a></span> Stabilizer R ́enyi Entropy and its Transition in the Coupled Sachdev-Ye-Kitaev Model (Pengfei Zhang, Shuyan Zhou, Ning Sun)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.17972">https://arxiv.org/abs/2509.17972</a></span> When is nonreciprocity relevant?</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.16312">https://arxiv.org/abs/2509.16312</a></span> Berry Trashcan With Short Range Attraction: Exact px + ipy Superconductivity in Rhombohedral Graphene (Ming-Rui Li, Yves H. Kwan, Hong Yao, B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.16361">https://arxiv.org/abs/2509.16361</a></span> Observation of mirror-odd and mirror-even spin texture in ultra-thin epitaxially-strained RuO2 films</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.16758">https://arxiv.org/abs/2509.16758</a></span> Error stabilized logical qubits in qudit generalizations of the monitored Kitaev model (Onur Erten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.16309">https://arxiv.org/abs/2509.16309</a></span> Asymptotically exact solution of the non-Hermitian disordered interacting Hatano-Nelson chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.17403">https://arxiv.org/abs/2509.17403</a></span> Dynamics of CPN−1 skyrmions (Seungho Lee, Hyojae Jeon, Jung Hoon Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.17648">https://arxiv.org/abs/2509.17648</a></span> Emergent Composite Particles from the Universal Exact Identities in Quantum Many-Body Systems with Generic Bilinear Interactions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.16562">https://arxiv.org/abs/2509.16562</a></span> Bulk-edge coupling induced by a moving impurity (Jiangbin Gong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.17043">https://arxiv.org/abs/2509.17043</a></span> Direct measurement of quantum geometric tensor in pseudo-Hermitian systems</p>
+<p class="p2"><br></p>
+<p class="p1">20250924</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18247">https://arxiv.org/abs/2509.18247</a></span> SU(4) Kondo Lattice in Semiconductor Moire ́ Materials (Sunghoon Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18363">https://arxiv.org/abs/2509.18363</a></span> Spin currents in crystals with spin-orbit coupling: multi-band effects in an effective Hamiltonian formalism (Kirill V. Samokhin, Manfred Sigrist, Mark H. Fischer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18269">https://arxiv.org/abs/2509.18269</a></span> Eigenstate Thermalization in 1+1-Dimensional SU(2) Lattice Gauge Theory Coupled with Dynamical Fermions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18966">https://arxiv.org/abs/2509.18966</a></span> Non-Lagrangian phases of matter from Wilsonian renormalization of 3D Wess-Zumino-Witten theory on Stiefel manifolds ***** (Shouryya Ray)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18255">https://arxiv.org/abs/2509.18255</a></span> Bootstrapping transport in the Drude-Kadanoff-Martin model (Sean A. Hartnoll)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18324">https://arxiv.org/abs/2509.18324</a></span> Chiral Color Code : Single-shot error correction for exotic topological order (Dongjin Lee, Beni Yoshida)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18256">https://arxiv.org/abs/2509.18256</a></span> Obtaining the Spectral Function of Moiré Graphene Heavy-Fermions Using Iterative Perturbation Theory (Dumitru Călugăru, Haoyu Hu, Lorenzo Crippa, Gautam Rai, Nicolas Regnault, Tim O. Wehling, Roser Valentí, Giorgio Sangiovanni, B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18267">https://arxiv.org/abs/2509.18267</a></span> Structures of group-15 elemental solids from an effective boundary theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18317">https://arxiv.org/abs/2509.18317</a></span> The Frenkel line and the pseudogap: an analogy between classical and electronic fluids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18438">https://arxiv.org/abs/2509.18438</a></span> Localized Excitons and Landau-Level Mixing in Time-Reversal Symmetric Pairs of Chern Bands</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18845">https://arxiv.org/abs/2509.18845</a></span> Interacting-cluster spin liquids with robust flat bands evolving into higher-rank half-moon phases and topological Lifshitz transitions (Ludovic D.C. Jaubert)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18922">https://arxiv.org/abs/2509.18922</a></span> Ultrasound response to time-reversal symmetry breaking below the superconducting phase transition (Egor Babaev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.19137">https://arxiv.org/abs/2509.19137</a></span> Re-emergent superconducting state with broken time-reversal symmetry under uniaxial stress (Egor Babaev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18462">https://arxiv.org/abs/2509.18462</a></span> SYK collective field theory as complex Liouville gravity (Andreas Blommaert, Damiano Tietto, Herman Verlinde)</p>
+<p class="p2"><br></p>
+<p class="p1">20250925</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.19436">https://arxiv.org/abs/2509.19436</a></span> Dynamical correlation effects in twisted bilayer graphene under strain and lattice relaxation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.19320">https://arxiv.org/abs/2509.19320</a></span> Introduction to some of the simplest topological phases of matter ***** (Frank Schindler)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.19735">https://arxiv.org/abs/2509.19735</a></span> Projective crystal symmetry and topological phases (Shengyuan A. Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.19825">https://arxiv.org/abs/2509.19825</a></span> Z2 topological invariant in three-dimensional PT- and PC-symmetric class CI band structures (Ken Shiozaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.19992">https://arxiv.org/abs/2509.19992</a></span> Breakdown of symmetry constraint in Floquet topological superconductor</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.19675">https://arxiv.org/abs/2509.19675</a></span> Quantum criticality in cuprate superconductors revealed by optical conductivity measurement (Hwiwoo Park, Sung-Sik Lee, G. D. Gu, Jungseek Hwang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.19440">https://arxiv.org/abs/2509.19440</a></span> There and Back Again: A Gauging Nexus between Topological and Fracton Phases ***** (Pranay Gorantla, Abhinav Prem, Nathanan Tantivasadakarn, Dominic J. Williamson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.19704">https://arxiv.org/abs/2509.19704</a></span> Holographic Aspects of Dynamical Mean-Field Theory</p>
+<p class="p3"><a href="https://arxiv.org/abs/2509.19868">https://arxiv.org/abs/2509.19868</a><span class="s2"> Building cluster systems</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20054">https://arxiv.org/abs/2509.20054</a></span> Generalized Li-Haldane Correspondence in Critical Free-Fermion Systems</p>
+<p class="p2"><br></p>
+<p class="p1">20250926</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20558">https://arxiv.org/abs/2509.20558</a></span> (2+1)D Quantum Electrodynamics at Finite Density on a Quantum Computer</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20462">https://arxiv.org/abs/2509.20462</a></span> Anomalous Landau Levels in Inhomogeneous Fluxes and Emergent Supersymmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20730">https://arxiv.org/abs/2509.20730</a></span> Squeezing codes: robust fluctuation-stabilized memories ***** (Ethan Lake, Sunghan Ro)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20431">https://arxiv.org/abs/2509.20431</a></span> Multicriticality between Purely Gapless SPT Phases with Unitary Symmetry *** (Saranesh Prembabu, Ruben Verresen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20540">https://arxiv.org/abs/2509.20540</a></span> Higher structure of non-invertible symmetries from Lagrangian descriptions *** (Seolhwa Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20622">https://arxiv.org/abs/2509.20622</a></span> Negative Charge Transfer: Ground State Precursor towards High Energy Batteries (Thomas P. Devereaux)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.21279">https://arxiv.org/abs/2509.21279</a></span> Where Non-Invertible Symmetries End: Twist Defects for Electromagnetic Duality (Shu-Heng Shao, Siwei Zhong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.21303">https://arxiv.org/abs/2509.21303</a></span> Topological nontrivial berry phase in altermagnet CrSb</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20435">https://arxiv.org/abs/2509.20435</a></span> Disorder-induced fractionalization of pair density waves (Julian May-Mann, Akshat Pandey, Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20498">https://arxiv.org/abs/2509.20498</a></span> Quantum Coherence in a Maximally Hot Hubbard Chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20626">https://arxiv.org/abs/2509.20626</a></span> Orbital magnetization and magnetic susceptibility of interacting electrons (Jian Kang, Minxuan Wang, Oskar Vafek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20772">https://arxiv.org/abs/2509.20772</a></span> Super-Solid phase in a U(2) symmetric S = 1 Magnet on the Triangular Lattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.21222">https://arxiv.org/abs/2509.21222</a></span> Electronic crystals in layered materials *** (Y. Zhou, I. Esterlis, T. Smolen ́ski)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20527">https://arxiv.org/abs/2509.20527</a></span> Non-linear sigma model in string field theory ***** (Alexander Frenkel,, Manki Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20740">https://arxiv.org/abs/2509.20740</a></span> Massless S-matrix Bootstraps and RG Flows Changrim Ahn</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.20929">https://arxiv.org/abs/2509.20929</a></span> COMPLEX LIES, REAL PHYSICS: THE ROLE OF ALGEBRA COMPLEXIFICATION</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.13126">https://arxiv.org/abs/2302.13126</a></span> Goldstone modes and the golden spiral in the ferromagnetic spin-1 biquadratic model ***</p>
+<p class="p2"><br></p>
+<p class="p1">20250929</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.22515">https://arxiv.org/abs/2509.22515</a></span> Metric response of relative entropy: a universal indicator of quantum criticality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.21591">https://arxiv.org/abs/2509.21591</a></span> Pathways from a chiral superconductor to a composite Fermi liquid **** (Yunchao Zhang, Leyna Shackleton, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.00605">https://arxiv.org/abs/2312.00605</a></span> Edge modes, extended TQFT, and measurement based quantum computation (Gabriel Wong)</p>
+<p class="p2"><br></p>
+<p class="p1">20250930</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.18259">https://arxiv.org/abs/2509.18259</a></span> Order from chaos with adaptive circuits on quantum hardware (Jedediah H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.22977">https://arxiv.org/abs/2509.22977</a></span> Sachdev-Ye-Kitaev Model in a Quantum Glassy Landscape</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.23904">https://arxiv.org/abs/2509.23904</a></span> Superconductivity Proximate to Non-Abelian Fractional Spin Hall Insulator in Twisted Bilayer MoTe2 ***** (Cheong-Eung Ahn, Gyeoul Lee, Donghae Seo, Youngwook Kim, Gil Young Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.23117">https://arxiv.org/abs/2509.23117</a></span> Noncollinear Magnetic Multipoles in Collinear Altermagnets (Rafael M. Fernandes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.23034">https://arxiv.org/abs/2509.23034</a></span> Correlative 3D Mapping of Structure, Composition, and Valence State Dynamics in Battery Cathodes via Simultaneous ADF-EDS-EELS Tomography (Yongsoo Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.24295">https://arxiv.org/abs/2509.24295</a></span> Magnon squeezing near a quantum critical point in a cavity-magnon-qubit system</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.23177">https://arxiv.org/abs/2509.23177</a></span> Non-Hermitian topological superconductivity with symmetry-enriched spectral and eigenstate features</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.23622">https://arxiv.org/abs/2509.23622</a></span> Tunable quantum metric and band topology in bilayer Dirac model (K. T. Law)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.22773">https://arxiv.org/abs/2509.22773</a></span> Universality of Shallow Global Quenches in Critical Spin Chains (Joel E. Moore, Norman Y. Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.22774">https://arxiv.org/abs/2509.22774</a></span> Entanglement and apparent thermality in simulated black holes (Jiannis K. Pachos)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.23734">https://arxiv.org/abs/2509.23734</a></span> HAAG DUALITY FOR 2D QUANTUM SPIN SYSTEMS</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.24719">https://arxiv.org/abs/2509.24719</a></span> Intrinsic spin accumulation in magnetic spin Hall effect</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.24415">https://arxiv.org/abs/2509.24415</a></span> Strong enhancement of d-wave superconductivity in an extended checkerboard Hubbard ladder</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
