20251008_accepted_paper_update

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
 	-->
+			<li><b>[Aug. 2025]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prb/accepted/10.1103/n4vy-dl5v" style="font-style: italic;">"Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality" (arXiv:2506.20710)"</a> has been accepted for publication as a Regular Article in <span style="font-style: italic;">Physical Review B</span>!
+			</li>
 			<li><b>[Sep. 2025]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prb/accepted/10.1103/yrkv-42wd" style="font-style: italic;">"Fermi surface bosonization for non-Fermi liquids (arXiv:2306.14955)"</a> has been finally accepted for publication as a Regular Article in <span style="font-style: italic;">Physical Review B</span>!
 			</li>
 			<li><b>[Sep. 2025]</b> I joined <a href="https://sites.google.com/view/han-ma" style="font-style: italic;">Professor Han Ma's group</a>, at <span style="font-style: italic;">Stony Brook University, Stony Brook, USA</span>.
@@ -192,6 +194,30 @@ Articles related to my works:
 	<div class="cvitemize"> <a id="publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Publication</a> </div>
 		<ul>
 				<li><div class="paper_title" style="display: flex;">
+					<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+			  <div class="sign3" style="display: inline-block;">W</div>
+			  <div class="sign1" style="display: inline-block;float: left;">N</div>
+			  <div class="sign2" style="display: inline-block;float: left;">E</div>
+			  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2506.20710" style="text-decoration:none;color:var(--font-color)">"Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality"</a> <div class="bouncing-text" style="display: inline-block;">
+		  <div class="iPsign8" style="display: inline-block;">D</div>
+		  <div class="iPsign1" style="display: inline-block;float: left;">A</div>
+		  <div class="iPsign2" style="display: inline-block;float: left;">C</div>
+		  <div class="iPsign3" style="display: inline-block;float: left;">C</div>
+		  <div class="iPsign4" style="display: inline-block;float: left;">E</div>
+		  <div class="iPsign5" style="display: inline-block;float: left;">P</div>
+		  <div class="iPsign6" style="display: inline-block;float: left;">T</div>
+		  <div class="iPsign7" style="display: inline-block;float: left;">E</div>
+		  <div class="shadow"></div></span>
+							<span class="cvperiod"></span></div>
+							<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b> and <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="text-decoration:none;color:var(--font-color)">Igor F. Herbut</a><br>
+							<a href="https://journals.aps.org/prb/accepted/10.1103/n4vy-dl5v">Accepted in Phys. Rev. B</a> (<a href="https://arxiv.org/abs/2506.20710">arXiv:2506.20710</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+			  <label>
+			    <input type="checkbox">
+			  </label>
+			</div> We study the Gross-Neveu-Yukawa field theory for the  SO($N$) symmetric traceless rank-two tensor order parameter coupled to Majorana fermions using the $\epsilon$-expansion around upper critical dimensions of $3+1$ to two loops. Previously we established in the one-loop calculation that the theory does not exhibit a critical fixed point for $N \geq 4$, but that nevertheless the stable fixed point inevitably emerges at a large number of fermion flavors $N_f$.  For $N_f < N_{f,c1} \approx N/2$, no critical fixed point exists; for $N_{f,c1} < N_f < N_{f,c2}$, a real critical fixed point emerges from the complex plane but fails to satisfy the additional stability conditions necessary for a continuous phase transition; and finally only for $N_f > N_{f,c2} \approx N$, the fixed point satisfies the stability conditions as well. In the present  work we compute the $O(\epsilon)$ (two-loop) corrections to the critical flavour numbers $N_{f,c1} $ and $N_{f,c2}$. Most importantly, we observe a sharp decrease in $N_{f,c2}$ from its one-loop value, which brings it closer to the point $N_f =1$ relevant to the standard Gross-Neveu model. Some three-loop results are also presented and discussed.
+			</span></details></div>
+					</li>
+					<li><div class="paper_title" style="display: flex;">
 				<span class="cvitem"><a href="https://journals.aps.org/prb/accepted/10.1103/yrkv-42wd" style="text-decoration:none;color:var(--font-color)">"Fermi Surface Bosonization for Non-Fermi Liquids"</a> <div class="bouncing-text" style="display: inline-block;">
 		  <div class="iPsign8" style="display: inline-block;">D</div>
 		  <div class="iPsign1" style="display: inline-block;float: left;">A</div>
@@ -214,21 +240,6 @@ Articles related to my works:
 				</li>
 		<!-- -->
 				<!-- -->
-					<li><div class="paper_title" style="display: flex;">
-					<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
-			  <div class="sign3" style="display: inline-block;">W</div>
-			  <div class="sign1" style="display: inline-block;float: left;">N</div>
-			  <div class="sign2" style="display: inline-block;float: left;">E</div>
-			  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2506.20710" style="text-decoration:none;color:var(--font-color)">"Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality"</a></span>
-							<span class="cvperiod"></span></div>
-							<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b> and <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="text-decoration:none;color:var(--font-color)">Igor F. Herbut</a><br>
-								<a href="https://arxiv.org/abs/2506.20710">arXiv:2506.20710</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
-			  <label>
-			    <input type="checkbox">
-			  </label>
-			</div> We study the Gross-Neveu-Yukawa field theory for the  SO($N$) symmetric traceless rank-two tensor order parameter coupled to Majorana fermions using the $\epsilon$-expansion around upper critical dimensions of $3+1$ to two loops. Previously we established in the one-loop calculation that the theory does not exhibit a critical fixed point for $N \geq 4$, but that nevertheless the stable fixed point inevitably emerges at a large number of fermion flavors $N_f$.  For $N_f < N_{f,c1} \approx N/2$, no critical fixed point exists; for $N_{f,c1} < N_f < N_{f,c2}$, a real critical fixed point emerges from the complex plane but fails to satisfy the additional stability conditions necessary for a continuous phase transition; and finally only for $N_f > N_{f,c2} \approx N$, the fixed point satisfies the stability conditions as well. In the present  work we compute the $O(\epsilon)$ (two-loop) corrections to the critical flavour numbers $N_{f,c1} $ and $N_{f,c2}$. Most importantly, we observe a sharp decrease in $N_{f,c2}$ from its one-loop value, which brings it closer to the point $N_f =1$ relevant to the standard Gross-Neveu model. Some three-loop results are also presented and discussed.
-			</span></details></div>
-					</li>
 					<li><div class="paper_title" style="display: flex;">
 					<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
 			  <div class="sign3" style="display: inline-block;">W</div>
